--- a/pwd.env
+++ b/pwd.env
@@ -1,3 +1,3 @@
 PORT=3000
-ZENDESK_EMAIL_AUTH=Basic dnZlZXJhcjJAbmNzdS5lZHU6U293bXlhdmlqYXlhOTYh
-ZENDESK_API_BASE_URL = https://zendeskcodingchallenge9874.zendesk.com
+ZENDESK_EMAIL_AUTH=Basic <EMAIL:Passoword>
+ZENDESK_API_BASE_URL = https://<COMPANYNAME>.zendesk.com
